  access an attribute through the 'attributes' property like ${currentEvent.attributes.attr}.  The reference documentation was updated to reflect this change.
* Fixed a bug resulting in loss of JSF ExternalContext state during execution of the JSF Lifecycle.
  This bug was affecting integration of the Trindad component library, which requires a special Response object to be set for its Ajax support to work.

Documentation
* Added documentation on FlowHandler and externalRedirect: redirect prefixes.
* Clarified the conversation-scoped and view-state managed persistence context patterns will be considered for implementation in future Web Flow releases.
* Removed unnecessary note about special Spring MVC and JSF model binding semantics; the semantics should be equal between view technologies, even if the underlying technologies differ.

Changes in version 2.0.0 (29.04.2008)
-------------------------------------
New Features
* Formally introduced the Spring Javascript (spring-js) public API and quick reference.
  The Spring.js library provides a consistent API for decorating HTML DOM nodes with rich widgets such as a filtering select,
  calendar, validating text box, currency text box, etc.  The API builds on Dojo 1.1 as the underlying widget toolkit.

* Added support for Ajax views with Spring MVC and Tiles.  This enables the rendering of JSP fragments / partials in a plain Spring MVC environment.
  See the 'booking-mvc' reference application for an example.

* Enhanced the 'booking-mvc' sample to use the Spring.js API for applying Ajax and client-side validation behaviors.
  This puts the Spring MVC + Web Flow + JSP sample on par with the Spring MVC + Web Flow + JSF sample in terms of "rich web" behavior.
  Ajax partial rendering, popup dialogs, hover effects, as well as text, number, and date validation are all demonstrated.

* Added support for automatic partial rendering of error messages when validation errors occur.
